SONARPHP-1499 Unignore the jGit stacktrace in Integration Test; SONARPHP-1500 Detect unexpected logs in scanner in Ruling (#1249)